# vapi_osp

./: CHANGELOG.md  CONTACT.txt  CONTRIBUTING.md  EXPORT_CHECKLIST.txt  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: 01-overview.md  02-api.md  02-core.md  03-app.md  03-worksheet.md  04-ui.md  05-c-api.md  06-worksheet.md  DOCUMENTATION_LANGUAGE.md  PROGRESS_AND_CHANGES.md  README.md  RELEASING.md  VERSIONING.md  api_evaluation.md  api_rating_10.md  architecture.md  building_dll.md  dependency_audit.md  integration.md  pipeline_cache.md  quick_reference.md  quick_start.md  scaling_and_changes.md  shortcomings.md  testing.md  ui_commercial_options.md  usage_examples.md  user_guide.md
docs/detail_docs/: README.md  core.md  font_render.md  gpu.md  platform.md  render.md  resource.md  ui.md
docs/render/: README.md  learning.md  learning.zh-CN.md
docs/ru/: README.md  RELEASING.md  VERSIONING.md  api_comparison.md  api_evaluation.md  architecture.md  descriptor_pipeline_link.md  font_ui_text.md  full_documentation.md  integration.md  plan_debug_optimization_refactor.md  quick_reference.md  quick_start.md  security_layer.md  shortcomings.md  testing.md  usage_examples.md  user_guide.md
examples/: README.md  main.c  main.py
include/: vapi.hpp  vapi_export.hpp  vapi_license.hpp
include/core/: README.md  asset_loader.hpp  build_info.hpp  easing.hpp  error.hpp  file_utils.hpp  logger.hpp  math_utils.hpp  types.hpp  (+2 more)
licenses/: CREATOR_PGP_PUBLIC_KEY.asc  CREATOR_SIGNING.md  LICENSE_GLFW.txt  LICENSE_VAPI.txt  LICENSE_VULKAN.txt  README.txt
python/: README.md
(+116 files in other folders)
